src/test/ui/wf/wf-const-type.stderr
error[E0277]: the trait bound `NotCopy: Copy` is not satisfied
  --> $DIR/wf-const-type.rs:10:12
   |
LL | const FOO: IsCopy<Option<NotCopy>> = IsCopy { t: None };
   |            ^^^^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `NotCopy`
   |
   = note: required because of the requirements on the impl of `Copy` for `Option<NotCopy>`
note: required by a bound in `IsCopy`
  --> $DIR/wf-const-type.rs:7:17
   |
LL | struct IsCopy<T:Copy> { t: T }
   |                 ^^^^ required by this bound in `IsCopy`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
